# CommonAlgorithms

./: .gitignore  LICENSE.txt  README.md
Source/: CMakeLists.txt  Main.cpp
Source/UnitTests/: CMakeLists.txt  Main.cpp
Source/UnitTests/Utility/: SumExample_test.cpp
Source/Utility/: CMakeLists.txt  SumExample.cpp  SumExample.h
